# ml-study

./: 0_pytorch.ipynb  1_softmax.ipynb  2_attention.ipynb  3_causal_mask.ipynb  4_positional_encodings.ipynb  6_tokenizer.ipynb  7_gpt_transformer.ipynb  main.py  pyproject.toml
trees/: convert_json.py  test.json
