[project]
name = "scale-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "numpy>=2.4.2",
    "regex>=2026.1.15",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
]
